--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "solana-donate-actions",
+	"name": "solana-tip-actions",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -10,6 +10,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@solana/actions": "^1.6.4",
+		"@solana/spl-token": "^0.4.8",
+		"@solana/web3.js": "^1.95.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
