--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"vite-plugin-node-polyfills": "^0.22.0"
 	},
 	"type": "module"
 }
