--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@solana/spl-token": "^0.4.8",
-		"@solana/web3.js": "^1.95.3",
+		"@solana-program/token": "^0.3.0",
+		"@solana/web3.js": "^2.0.0-rc.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-cloudflare": "^4.7.2",
 		"@sveltejs/kit": "^2.0.0",
