--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
 	"devDependencies": {
 		"@solana-program/token": "^0.3.0",
 		"@solana/web3.js": "^2.0.0-rc.1",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-auto": "^3.2.5",
 		"@sveltejs/adapter-cloudflare": "^4.7.2",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.7",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"@sveltejs/kit": "^2.5.28",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.19",
+		"svelte-check": "^4.0.2",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.6",
+		"vite-plugin-node-polyfills": "^0.22.0"
 	},
 	"type": "module"
 }
