--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@solana-program/system": "^0.5.1",
 		"@solana-program/token": "^0.3.0",
 		"@solana/web3.js": "^2.0.0-rc.1",
 		"@sveltejs/adapter-auto": "^3.2.5",
