--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
 		"svelte": "^4.2.19",
 		"svelte-check": "^4.0.2",
 		"typescript": "^5.6.2",
-		"vite": "^5.4.6",
-		"vite-plugin-node-polyfills": "^0.22.0"
+		"vite": "^5.4.6"
 	},
 	"type": "module"
 }
